# eag-benchmarks

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
agents/: base.py  eag.py  pal.py  pot.py  react.py
benchmarks/: run.py
configs/: datasets.yaml  models.yaml
datasets/bird/: loader.py
docs/: Architecture.md  Evaluation.md  Feedback-and-Debugging.md  Home.md  Related-Work.md  Validation-and-Security.md
eval/: answer_extractor.py  answer_parser.py  comparators.py  executor.py  gold.py  metrics.py  normalizer.py  precheck.py  verdict.py
llm/: __init__.py  direct_client.py  glm.py  groq.py  litellm_client.py  provider.py
scripts/: download_bird.sh
tools/: __init__.py  execute_sql.py  get_schema.py
