[project]
name = "eag-benchmarks"
version = "0.1.0"
description = "Benchmark harness for Execution-Augmented Generation (EAG) — pluggable evaluation of structured-data reasoning paradigms against BIRD text-to-SQL."
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "litellm>=1.82.3",
    "tenacity>=8.0.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "datasets", "llm", "eval", "benchmarks", "tools"]
